--- a/example/index.html
+++ b/example/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Example</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-        integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+    crossorigin="anonymous">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
-          integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
-          crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+    crossorigin="anonymous"></script>
   <base href="/">
   <script src="dist/type-checkers.js"></script>
   <style type="text/css">
@@ -37,13 +37,14 @@
 
     // this code will work as intended, but type errors should spam
     typeChecked.val1 = 'abc';
-    typeChecked.val2 = {};
-
+    typeChecked.val2 = { shouldBeString: true };
     // will recognize array and show error
     typeChecked.list = {};
 
     // optional parameter "deep" is set to true by default, so all objects coming from properties will be wrapped too
     typeChecked.child.val3 = false;
+    typeChecked.val2.stringProperty = 'init with string';
+    typeChecked.val2.stringProperty = null;
 
     // getting property with wrong type should shows error log too
     const myVal = typeChecked.val2;
@@ -53,9 +54,26 @@
 
     // show error logs for arguments mismatch
     typeChecked.method('a', 1, false);
+
+    // merge objects
+    // FIXME merge should throw errors for incompatible types
+    console.log(Object.assign(typeChecked, {
+      val1: 'true',
+      val2: 12,
+    }));
+
+    const typeCheckedSource = TypeCheckers.create({
+      val3: false,
+      child: '{}',
+    });
+
+    // should show errors on mergeing incompatible type definitions.
+    console.log(Object.assign(typeChecked, typeCheckedSource));
   </script>
 </head>
+
 <body>
-<h1>Type Checkers base</h1>
+  <h1>Type Checkers base</h1>
 </body>
+
 </html>
